"""triton-backend bazel module"""
module(
    name = "triton-backend",
    version = "r23.10",
    compatibility_level = 1,
)

bazel_dep(name = "triton-common", version = "r23.10")
bazel_dep(name = "triton-core", version = "r23.10")
bazel_dep(name = "rules_cuda", version = "0.2.1")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

local_path_override(
    module_name = "hedron_compile_commands",
    path = "/root/code/bazel-compile-commands-extractor",
)
local_path_override(
    module_name = "triton-common",
    path = "/root/code/common",
)
local_path_override(
    module_name = "triton-core",
    path = "/root/code/core",
)
local_path_override(
    module_name = "cnmem",
    path = "/root/code/cnmem",
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain", dev_dependency = True)
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")
